--- a/elso_weboldal/index.html
+++ b/elso_weboldal/index.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <script src="app.js"></script>
     <title>Document</title>
     <style>
-        div {
-            margin: 20px;
-        }
-        /* Ez egy konkrétan azonosított div-hez tarotzik csak.
+      div {
+        margin: 20px;
+      }
+      /* Ez egy konkrétan azonosított div-hez tarotzik csak.
         */
-        #C12 {
-            font-style: italic;
-        }
+      #C12 {
+        font-style: italic;
+      }
     </style>
     <script>
-        // console.log("hello")            // csak az inspector ablakba írja bele
-        // window.alert("hello, figyelem") 
-        // két perjel a kommentelés jele
+      // console.log("hello")            // csak az inspector ablakba írja bele
+      // window.alert("hello, figyelem")
+      // két perjel a kommentelés jele
 
-        /*
+      /*
         ameddig /* után írok, addig az nem kód
         le kell zárni mindenképp a záró jel fordított: 
         */
     </script>
-</head>
-<body>
+  </head>
+  <br />
+  <body>
     <h1>Ez a címsor bizony.</h1>
     <!-- ez egy komment -->
-    <div style="font-size: 32px; font-weight: bold;" class="my-title">Ez egy másik cím amit beírtam. </div>
+    <div style="font-size: 32px; font-weight: bold" class="my-title">
+      Ez egy másik cím amit beírtam.
+      <br />
+    </div>
     <div class="red-box rounded" id="C11">Ez egy piros doboz</div>
     <div class="red-box" id="C12">Ez egy piros doboz</div>
     <button>Ez meg az első gomb.</button>
     <b>ez egy B taggelt szöveg</b>
-    <img src="images/cat.jpg" alt="Ez egy cica" width="150" height="150">
+    <img src="images/cat.jpg" alt="Ez egy cica" width="150" height="150" />
     <ul class="menu">
-        <li class="menu-item">Menu1</li>
-        <li class="menu-item">Menu2</li>
-        <li class="menu-item">Menu3</li>
+      <li class="menu-item">Menu1</li>
+      <li class="menu-item">Menu2</li>
+      <li class="menu-item">Menu3</li>
     </ul>
 
-
     <strong>Ez egy félkövérrel írt mondat.</strong>
-</body>
+  </body>
 </html>
