--- a/X_test/index.html
+++ b/X_test/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" href="style.css" />
     <style type="text/css">
       padding: 0;
       margin: 0;
@@ -22,6 +22,7 @@
         font-style: italic;
         border: 10px solid black;
       }
+
       .list-item {
         color: tomato;
         background-color: azure;
@@ -54,9 +55,10 @@
   <div class="box-two">BOX 2</div>
 
   <!-- inline style, style tag -->
+  <div class="proba egy">EZT NEZD</div>
 
   <h1>CSS</h1>
-  <p>1. inline style:</p>
+  <p id="123">1. inline style:</p>
   <div style="color: blue">text in this box is blue, with inline style</div>
 
   <p>Multiline inline style (not very common) :</p>
